// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should test AdminCompletedActivities component 1`] = `
<Fragment>
  <div
    className="row w-100"
  >
    <div
      className="col mb-3 col-12 text-center"
    >
      <div
        className="row"
      >
        <div
          className="col-md-6"
        >
          <PaginationComponent
            currentPage={1}
            itemsPerPage={9}
            onPageChange={[Function]}
            total={0}
          />
        </div>
      </div>
      <h4>
        Completed Activities
      </h4>
      <ForwardRef
        responsive={true}
      >
        <thead>
          <tr>
            <th>
              Activity Id
            </th>
            <th>
              User Name
            </th>
            <th>
              Bio Waste
            </th>
            <th>
              Non-Bio Waste
            </th>
            <th>
              Donation
            </th>
            <th>
              Representative Name
            </th>
          </tr>
        </thead>
        <tbody />
      </ForwardRef>
    </div>
  </div>
</Fragment>
`;

exports[`should test AdminPendingActivities component 1`] = `
<Fragment>
  <div
    className="row w-100"
  >
    <div
      className="col mb-3 col-12 text-center"
    >
      <div
        className="row"
      >
        <div
          className="col-md-6"
        >
          <PaginationComponent
            currentPage={1}
            itemsPerPage={9}
            onPageChange={[Function]}
            total={0}
          />
        </div>
      </div>
      <h4>
        Pending Activities
      </h4>
      <ForwardRef
        responsive={true}
      >
        <thead>
          <tr>
            <th>
              Activity Id
            </th>
            <th>
              User Name
            </th>
            <th>
              Bio Waste
            </th>
            <th>
              Non-Bio Waste
            </th>
            <th>
              Donation
            </th>
            <th>
              Representative Name
            </th>
          </tr>
        </thead>
        <tbody />
      </ForwardRef>
    </div>
  </div>
</Fragment>
`;

exports[`should test RepCompletedActivities component 1`] = `
<Fragment>
  <ForwardRef
    bordered={true}
    hover={true}
    responsive={true}
    striped={true}
  >
    <thead>
      <tr>
        <th>
          Activity Id
        </th>
        <th>
          Bio Waste
        </th>
        <th>
          Non Bio Waste
        </th>
        <th>
          Donation
        </th>
        <th>
          User Id
        </th>
      </tr>
    </thead>
    <tbody />
  </ForwardRef>
</Fragment>
`;

exports[`should test SideBar component 1`] = `
<Redirect
  to="/admin/login"
/>
`;

exports[`should test TableMessages component 1`] = `
<Fragment>
  <div
    className="row w-100"
  >
    <div
      className="col mb-3 col-12 text-center"
    >
      <div
        className="row"
      >
        <div
          className="col-md-6"
        >
          <PaginationComponent
            currentPage={1}
            itemsPerPage={15}
            onPageChange={[Function]}
            total={0}
          />
        </div>
      </div>
      <h4>
        Messages
      </h4>
      <ForwardRef
        responsive={true}
      >
        <thead>
          <tr>
            <th>
              Name
            </th>
            <th>
              E-mail
            </th>
            <th>
              Message
            </th>
            <th>
              Action
            </th>
          </tr>
        </thead>
        <tbody />
      </ForwardRef>
    </div>
  </div>
</Fragment>
`;

exports[`should test TableRepresentatives component 1`] = `
<Fragment>
  <div
    className="row w-100"
  >
    <div
      className="col mb-3 col-12 text-center"
    >
      <div
        className="row"
      >
        <div
          className="col-md-6"
        >
          <PaginationComponent
            currentPage={1}
            itemsPerPage={9}
            onPageChange={[Function]}
            total={0}
          />
        </div>
      </div>
      <h4>
        Representative
      </h4>
      <ForwardRef
        responsive={true}
      >
        <thead>
          <tr>
            <th>
              Name
            </th>
            <th>
              E-mail
            </th>
            <th>
              Phone Number
            </th>
            <th>
              City
            </th>
            <th>
              Address
            </th>
            <th>
              Action
            </th>
          </tr>
        </thead>
        <tbody />
      </ForwardRef>
    </div>
  </div>
</Fragment>
`;

exports[`should test TableUsers component 1`] = `
<Fragment>
  <div
    className="row w-100"
  >
    <div
      className="col mb-3 col-12 text-center"
    >
      <div
        className="row"
      >
        <div
          className="col-md-6"
        >
          <PaginationComponent
            currentPage={1}
            itemsPerPage={9}
            onPageChange={[Function]}
            total={0}
          />
        </div>
      </div>
      <h4>
        Users
      </h4>
      <ForwardRef
        responsive={true}
      >
        <thead>
          <tr>
            <th>
              Name
            </th>
            <th>
              E-mail
            </th>
            <th>
              Phone Number
            </th>
            <th>
              City
            </th>
            <th>
              Address
            </th>
            <th>
              Action
            </th>
          </tr>
        </thead>
        <tbody />
      </ForwardRef>
    </div>
  </div>
</Fragment>
`;

exports[`should test TableVerifiedRep component 1`] = `
<Fragment>
  <div
    className="row w-100"
  >
    <div
      className="col mb-3 col-12 text-center"
    >
      <h3>
        Verify representatives
      </h3>
      <div
        className="row"
      >
        <div
          className="col-md-6"
        >
          <PaginationComponent
            currentPage={1}
            itemsPerPage={7}
            onPageChange={[Function]}
            total={0}
          />
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`should test UserCompletedActivities component 1`] = `
<Fragment>
  <ForwardRef
    bordered={true}
    hover={true}
    responsive={true}
    striped={true}
  >
    <thead>
      <tr>
        <th>
          Activity Id
        </th>
        <th>
          Bio Waste
        </th>
        <th>
          Non Bio Waste
        </th>
        <th>
          Donation
        </th>
        <th>
          Representative Id
        </th>
      </tr>
    </thead>
    <tbody />
  </ForwardRef>
</Fragment>
`;
